syntax="proto3";

package calculator;
option go_package="calculatorpb";

message CalculatorRequest {
    int64 number1 = 1;
    int64 number2 = 2;
}

message CalculatorResponse {
    int64 result = 1;
}

service CalculatorService{
    rpc Sum(CalculatorRequest) returns (CalculatorResponse) {}
}

